plugins {
    id "io.freefair.lombok" version "9.2.0"
    id "com.vanniktech.maven.publish" version "0.36.0"
    id "com.github.ben-manes.versions" version "0.53.0"
    id "net.ltgt.errorprone" version "5.1.0"
}

apply plugin: "java-library"
apply plugin: "jacoco"

group = "nl.colorize"
version = "2026.2"
compileJava.options.encoding = "UTF-8"

java {
    sourceCompatibility = "25"
    targetCompatibility = "25"
    sourceSets.main.java.srcDirs = ["source"]
    sourceSets.main.resources.srcDirs = ["resources"]
    sourceSets.test.java.srcDirs = ["test"]
}

repositories {
    mavenCentral()
}

dependencies {
    api "org.jspecify:jspecify:1.0.0"
    api "com.google.guava:guava:33.5.0-jre"
    testImplementation "org.junit.jupiter:junit-jupiter:6.0.3"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
    errorprone "com.google.errorprone:error_prone_core:2.48.0"
}

test {
    useJUnitPlatform()
}

jacocoTestReport {
    afterEvaluate {
        classDirectories.from = files(classDirectories.files.collect {
            fileTree(dir: it, exclude: ["**/swing/**", "**/Platform*"])
        })
    }
}

task coverage(dependsOn: ["test", "jacocoTestReport"]) {
    doLast {
        def report = file("${buildDir}/reports/jacoco/test/html/index.html").text
        def coverage = report =~ "tfoot.*?ctr2.*?>([\\d.]+%).*?tfoot"
        println "-" * 40
        println "Test coverage: " + coverage[0][1]
    }
}

tasks.withType(JavaCompile).configureEach {
    options.errorprone.allErrorsAsWarnings = true
    options.errorprone.disable("EffectivelyPrivate")
    options.errorprone.disable("FormatStringShouldUsePlaceholders")
    options.errorprone.disable("JavaUtilDate")
    options.errorprone.disable("InlineMeSuggester")
    options.errorprone.disable("StringCaseLocaleUsage")
}

mavenPublishing {
    coordinates("nl.colorize", "colorize-java-commons", version)

    pom {
        name = "Colorize-Java-Commons"
        description = "Library containing utility classes for web, desktop, and mobile applications."
        url = "https://www.clrz.nl"
        inceptionYear = "2007"
        licenses {
            license {
                name = "The Apache License, Version 2.0"
                url = "http://www.apache.org/licenses/LICENSE-2.0.txt"
                distribution = "http://www.apache.org/licenses/LICENSE-2.0.txt"
            }
            developers {
                developer {
                    id = "colorize"
                    name = "Colorize"
                    url = "https://clrz.nl"
                }
            }
            scm {
                url = "https://github.com/colorizenl/colorize-java-commons"
                connection = "scm:git:https://github.com/colorizenl/colorize-java-commons.git"
                developerConnection = "scm:git:https://github.com/colorizenl/colorize-java-commons.git"
            }
        }
    }
}
